c200 doesn't have \ActionTreeStop anymore since r21373, so don't try to use it.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21513 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/rockbox_interface/browsing_and_playing.tex
+++ b/manual/rockbox_interface/browsing_and_playing.tex
@@ -69,7 +69,7 @@ the \setting{Show Files} setting to all.
       \ActionTreeWps & If there is an audio file playing, returns to the
          \setting{While Playing Screen} (WPS) without stopping playback.\\
       %
-      \nopt{player}%
+      \nopt{player,c200}%
         {%
           \ActionTreeStop & Stops audio playback.\\%
         }%
