--- a/manual/plugins/lua.tex
+++ b/manual/plugins/lua.tex
@@ -10,10 +10,10 @@ There are a few exceptions/additions to the Lua support in Rockbox:
 \begin{description}
     \item[No floating point support.] The number type in Lua is usually float,
     however in the Rockbox implementation it is integer.
-    \item[Non-supported libraries.] The coroutine, debug, file, io, math
-    and package libraries are not supported.
-    \item[Partially-supported libraries.]  The os library is only partially
-    supported.
+    \item[Non-supported libraries.] The coroutine, debug, file, io and math
+    libraries are not supported.
+    \item[Partially-supported libraries.]  The os and package library is only
+    partially supported.
     \item[Additional libraries.] The bitlib library is integrated to support
     bitwise operators.  See \url{http://luaforge.net/projects/bitlib} and
     \url{http://lua-users.org/wiki/BitwiseOperators}.
