--- a/manual/preamble.tex
+++ b/manual/preamble.tex
@@ -302,7 +302,7 @@
 
 
 % command to set the default table heading for button lists
-\newcommand{\btnhead}{\textbf{Key} \opt{remote_keymap}{%
+\newcommand{\btnhead}{\textbf{Key} \opt{HAVE_REMOTE_KEYMAP}{%
   & \textbf{Remote Key}} & \textbf{Action} \\\midrule}
 % environment intended to be used with button maps
 % usage: \begin{btnmap}{caption}{label} Button & ButtonAction \\ \end{btnmap}
@@ -312,7 +312,7 @@
 % Cheers for the usenet helping me building this up :)
 
 % tabularx is set to be either two or three columns wide depending on whether
-% remote_keymap is defined in the platform file for the target in question.
+% HAVE_REMOTE_KEYMAP is defined in the platform file for the target in question.
 % If it is, then every button table has three columns of the form
 % Main Unit Key  &  Remote Key  &  Description \\
 
@@ -326,11 +326,11 @@
     \endcenter%
   }
   \center
-  \opt{remote_keymap}{
+  \opt{HAVE_REMOTE_KEYMAP}{
     % here is the table width defined for 3 columns
     \tabularx{.9\textwidth}{>{\raggedright\arraybackslash}p{.2\textwidth}>{\raggedright\arraybackslash}p{.2\textwidth}X}\toprule 
   }
-  \nopt{remote_keymap}{
+  \nopt{HAVE_REMOTE_KEYMAP}{
     % here is the table width defined for 2 columns
     \tabularx{.75\textwidth}{>{\raggedright\arraybackslash}p{.22\textwidth}X}\toprule
   }
