Also update the manual
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21542 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/plugins/lua.tex
+++ b/manual/plugins/lua.tex
@@ -10,9 +10,9 @@ There are a few exceptions/additions to the Lua support in Rockbox:
 \begin{description}
     \item[No floating point support.] The number type in Lua is usually float,
     however in the Rockbox implementation it is integer.
-    \item[Non-supported libraries.] The coroutine, debug, file, io and math
-    libraries are not supported.
-    \item[Partially-supported libraries.]  The os and package library is only
+    \item[Non-supported libraries.] The coroutine, debug and math libraries are
+    not supported.
+    \item[Partially-supported libraries.]  The os and package libraries are only
     partially supported.
     \item[Additional libraries.] The bitlib library is integrated to support
     bitwise operators.  See \url{http://luaforge.net/projects/bitlib} and
